<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_store_24"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Amount"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:hint="@string/cost_of_service"
                    android:inputType="numberDecimal"
                    android:padding="4dp"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:src="@drawable/baseline_room_service_24"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/service_Question"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/how_was_the_service" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:checkedButton="@id/good_tip"
            android:background="#D2F3A1"
            >

            <RadioButton
                android:id="@+id/amazing_tip"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/amazing_20"
                android:textStyle="bold"
                />
            <RadioButton
                android:id="@+id/good_tip"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/good_18"
                android:textStyle="bold"
                />
            <RadioButton
                android:id="@+id/okay_tip"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/okay_15"
                android:textStyle="bold"
                />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_call_made_24"
                />

            <Switch
                android:id="@+id/round_switch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:checked="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="Round up tip?"
                />

        </LinearLayout>


        <Button
            android:id="@+id/Calculate_Button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:text="@string/calculate"
            />

        <TextView
            android:id="@+id/tip_result"
            android:text="Tip Amount"
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_marginTop="5dp"
            android:layout_height="33dp"
            android:padding="2dp"
            />

    </LinearLayout>




</ScrollView>